Bio section alignment correction

--- a/css/app.css
+++ b/css/app.css
@@ -105,9 +105,11 @@ p.copyright{
 	.logo a{font-size: 2em;}
 	.main {padding-top: 15%;}
 	.row{padding: 0;}
+	.center {text-align: center;}
 	.portfolio img{margin-bottom: 10%;}
-	img.avatar{margin-top: 15%;}
+	img.avatar{margin-top: 15%; width: 80%;}
 	h2.bio{font-size: 2em;}
 	p.bio{font-size: 1.25em; color: #3f7f7c;}
 	ul.social li a{font-size: .5em;}
+	p.copyright {font-size: .9em;}
 }
